# oregon-trail-clone

./: .gitignore  README.md  pyproject.toml  requirements.txt
.context/: architecture.yml  architecture_refined.yml  design.yml  documentation.yml  domain.yml  domain_contract_specification.yml  game_logic.yml  history.yml  kernel.yml  patterns.yml  project_meta.yml  screaming_mvc.yml  sessions.yml  summaries.yml
_archive/docs/: 20260415_0105_architectural_status_report.md  domain_testing_regime.md  malady_dataflow.md
docs/_archive/: characters.md  contracts.md  domain_layer.md  engine_orchestration.md  epic_issues_bootstrap.md  storage.md  system_kernel.md  world.md
docs/_archive/prototype/: engine_orchestrator.md
docs/design/: TODO.md  characters.md  contracts.md  domain_layer.md  engine_orchestration.md  objects.md  system_kernel.md
docs/design/_archive/: characters.md  engine_orchestration.md  storage.md  world.md
docs/design/prototype/: engine_orchestrator.md
docs/explanation/: adr-process.md  workflow.md
docs/explanation/architecture/: adr_review_notes.md
docs/explanation/design/: TODO.md  architectural_police.md  base_registry_contract.md  discovery_system.md  domain_blueprint_contract.md  (+11 more)
docs/how-to/: create-adr.md  draft-tdd.md
docs/reference/: architectural_disambiguation.md  glossary.md
src/: __init__.py  main.py
src/core/: __init__.py  container.py
src/domain/: __init__.py
src/engine/: __init__.py
src/storage/: __init__.py
src/ui/: __init__.py
tests/integration/: test_main.py
tests/tooling/: test_import_lib.py
(+156 files in other folders)
