[project]
name = "oregon-trail-python"
version = "0.1.0"
description = "A terminal-based Oregon Trail clone"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
    "asciimatics>=1.15.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]